# RadarControl

./: .gitignore  CMakeLists.txt  README.md  data.pb.cc  data.pb.h  data.proto  input.txt  main.cpp  recompile.sh  simulator.py  visualizer.py
config/: default.pbtxt  params.pbtxt  scenario_hard.pbtxt  scenario_simple.pbtxt
flat/: CMakeLists.txt  params.fbs
params/: params.json  params.pb.txt  params.pbtxt  radars.json  simulator.json  visualizer.json
proto/: CMakeLists.txt  params.proto  scenario.proto
radar_control/: CMakeLists.txt  calculations.cpp  calculations.h  data.h  radar_controller.cpp  radar_controller.h
radar_control/lib/: CMakeLists.txt  calculations.cpp  calculations.h  data.h  radar_controller.cpp  radar_controller.h  test.cpp  test.h
radar_control/radar_controller/: CMakeLists.txt  radar_controller.cpp  radar_controller.h
scenarios/: example_dead_zone.pbtxt  example_inertia.pbtxt  hard.pbtxt  simple.pbtxt  simple1.pbtxt  simple2.pbtxt  simple3.pbtxt  simple4.pbtxt  simple5.pbtxt  simple6.pbtxt  test_1.pbtxt  test_10.pbtxt  test_11.pbtxt  test_12.pbtxt  test_13.pbtxt  test_14.pbtxt  test_15.pbtxt  test_16.pbtxt  test_17.pbtxt  test_18.pbtxt  test_19.pbtxt  test_2.pbtxt  test_20.pbtxt  test_3.pbtxt  test_4.pbtxt  test_5.pbtxt  test_6.pbtxt  test_7.pbtxt  test_8.pbtxt  test_9.pbtxt
scripts/: make_portable.sh  recompile.sh
simulator/: CMakeLists.txt  defense.cpp  defense.h  main.cpp  simulator.cpp  simulator.h  visualizer.cpp  visualizer.h
tools/defense/: CMakeLists.txt  defense.cpp  defense.h
tools/simulator/: CMakeLists.txt  simulator.cpp  simulator.h
tools/visualizer/: CMakeLists.txt  visualizer.cpp  visualizer.h
ut/: CMakeLists.txt  calc_angle_1_target.cpp  calc_angle_one_target.cpp  calculate_angle.cpp
util/: CMakeLists.txt  flat.cpp  flat.h  json.cpp  json.h  points.cpp  points.h  proto.cpp  proto.h  timer.cpp  timer.h  util.cpp  util.h
